<resources>
    <string name="app_name">My Application</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="text">Login</string>
    <string name="password">Password</string>
    <string name="radioB">Radio Button</string>
    <string name="checkB">Check Box</string>
    <string name="switchB">What does this do?</string>
    <string name="imageB">Image</string>
    <string name="button1">Login</string>
    <string name="Ok">OK</string>
    <string name="Cancel">CANCEL</string>
    <string name="DialogTitle">CheckBox</string>
    <string name="DialogMessage">OK</string>
    <string name="ButtonText2">Start Chat</string>
    <string name="commentsList">ListView</string>
    <string name="comment"> </string>
    <string name="SendB">SEND</string>
    <string name="message_text">TextView</string>
    <string name="cWeather">  </string>
    <string name="cTemp">  </string>
    <string name="minTemp">  </string>
    <string name="maxTemp">  </string>
    <string name="progressB">  </string>
    <string name="weatherB">Weather Forecast</string>



</resources>
