<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--  <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/hello_message"
          android:id="@+id/hello_message"
          />
          -->

      <Button
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/ButtonText"
          android:id="@+id/button"
          android:layout_below="@+id/hello_message"
          android:layout_alignParentStart="true"
          android:layout_marginTop="15dp"
          />

      <Button
          android:text="@string/ButtonText2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/button2"
          android:layout_below="@+id/buttonStart"
          android:layout_alignParentStart="true"
          android:layout_marginTop="15dp"
          />

      <Button
          android:id="@+id/weatherB"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:text="@string/weatherB"
          android:layout_below="@+id/button2"
          android:layout_alignParentStart="true" />

  </LinearLayout>